fix flex layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -186,17 +186,17 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;;
-
+    justify-content: space-between;
     > li {
         margin-bottom: $spacing-unit;
         max-width: 230px;
-        min-width: 150px;
         padding: 0 5px 0 5px;
         @include media-query($on-laptop) {
+            width: 45%;
             max-width: 45%;
         }
         @include media-query($on-palm) {
+            width: 100%;
             max-width: 100%;
         }
     }
